--- a/index.html
+++ b/index.html
@@ -28,13 +28,20 @@
         <strong>Edianderson Filho</strong>
       </p>
 
-      <span>Me Encontre nas Redes</span>
-      <a
-        href="https://instagram.com/_ediandersonf?igshid=MzNlNGNkZWQ4Mg=="
-        target="_blank"
-      >
-        <img src="./assets/instagram.png" alt="ícone instagram" />
-      </a>
+      <span>Encontre-me nas redes</span>
+
+      <div class="redes">
+        <a
+          href="https://instagram.com/_ediandersonf?igshid=MzNlNGNkZWQ4Mg=="
+          target="_blank"
+        >
+          <img src="./assets/instagram.png" alt="ícone do instagram" />
+        </a>
+
+        <a href="https://www.facebook.com/edianderson.ferreira" target="_blank">
+          <img src="./assets/facebook.png" alt="ícone do facebook" />
+        </a>
+      </div>
     </aside>
     <nav>
       <a
@@ -44,10 +51,12 @@
       >
         <small>20 de Março 2023</small>
         <h1>Jornada do Zero à Primeira Vaga</h1>
-        <img
-          src="./assets/jornada.png"
-          alt="Rodrigo e Mayk apresentando o evento Jornada do Zero à Primeira Vaga"
+        <div>
+          <img
+            src="./assets/jornada.png"
+            alt="Rodrigo e Mayk apresentando o evento Jornada do Zero à Primeira Vaga"
         />
+        </div>
         <p>
           At vero eos et accusamus et iusto odio dignissimos ducimus qui
           blanditiis praesentium voluptatum deleniti atque corrupti quos dolores
@@ -62,10 +71,12 @@
       >
         <small>20 de Março 2023</small>
         <h1>Jornada do Zero à Primeira Vaga</h1>
-        <img
-          src="./assets/jornada.png"
-          alt="Rodrigo e Mayk apresentando o evento Jornada do Zero à Primeira Vaga"
+        <div>
+          <img
+            src="./assets/jornada.png"
+            alt="Rodrigo e Mayk apresentando o evento Jornada do Zero à Primeira Vaga"
         />
+        </div>
         <p>
           At vero eos et accusamus et iusto odio dignissimos ducimus qui
           blanditiis praesentium voluptatum deleniti atque corrupti quos dolores
