criando conteúdo da página

--- a/index.html
+++ b/index.html
@@ -44,44 +44,33 @@
       </div>
     </aside>
     <nav>
-      <a
-        href="https://www.youtube.com/watch?v=3nz5HkUJaVU"
-        target="_blank"
-        class="memory"
-      >
+      <a class="memory">
         <small>20 de Março 2023</small>
-        <h1>Jornada do Zero à Primeira Vaga</h1>
+        <h1>Apresentação: Quem sou eu?</h1>
         <div>
-          <img
-            src="./assets/jornada.png"
-            alt="Rodrigo e Mayk apresentando o evento Jornada do Zero à Primeira Vaga"
-        />
+          <img src="./assets/foto capa edi.jpg" alt="Foto de Edianderson" />
         </div>
         <p>
-          At vero eos et accusamus et iusto odio dignissimos ducimus qui
-          blanditiis praesentium voluptatum deleniti atque corrupti quos dolores
-          et quas molestias excepturi sint occaecati cupiditate non provident,
-          similique...
+          Olá! Me chamo Edianderson Filho, tenho 24 anos, sou músico e este é o meu primeiro
+          projeto WEB. Sou licenciando em música no IFPE - Campus Belo Jardim e
+          tive o meu primeiro contato com a área de progamação por meio dos
+          projetos de extensão que os alunos do curso de Engenharia de Software criaram. Após esse contato inicial, tenho tido um
+          interesse crescente por conhecimento na área da tecnologia, mais
+          específicamente, no desenvolvimento de Softwares. <br> E, foi este desejo
+          que me fez criar este site!
         </p>
       </a>
-      <a
-        href="https://www.youtube.com/watch?v=3nz5HkUJaVU"
-        target="_blank"
-        class="memory"
-      >
-        <small>20 de Março 2023</small>
-        <h1>Jornada do Zero à Primeira Vaga</h1>
+      <a class="memory">
+        
+        <h1>Next Level Week: Meu primeiro passo para tornar-me um DEV</h1>
         <div>
           <img
-            src="./assets/jornada.png"
-            alt="Rodrigo e Mayk apresentando o evento Jornada do Zero à Primeira Vaga"
-        />
+            src="./assets/download.jpg"
+            alt="tela de notebook com códigos de programação"
+          />
         </div>
         <p>
-          At vero eos et accusamus et iusto odio dignissimos ducimus qui
-          blanditiis praesentium voluptatum deleniti atque corrupti quos dolores
-          et quas molestias excepturi sint occaecati cupiditate non provident,
-          similique...
+          Nessa minha nova caminhada no campo da tecnologia, tive uma série de amigos que impulsionaram o meu interesse por desenvolvimento de Software. Conviver com pessoas que estão em um mergulho constante no mundo tecnológico fez com que eu desejasse trilhar este mesmo caminho. A Rocketseat caiu de para-quedas nos meus braços graças à uma amiga que já atua com DEV e já havia participado de várias maratonas elaboradas pela empresa e viu que seria uma grande oportunidade para que eu tivesse o primeiro contato com códigos de uma maneira mais prática e eficiente. Eu não via como algo possível para mim ser um desenvolvedor, mas hoje, vejo como algo que eu posso alcançar graças ao NLW. <br> A Rocketseat trouxe para minha vida mais uma meta a ser alcançada. tornar-me um DEV!
         </p>
       </a>
     </nav>
