Correção do hover dos icones das redes sociais

--- a/index.html
+++ b/index.html
@@ -34,34 +34,37 @@
         <a
           href="https://instagram.com/_ediandersonf?igshid=MzNlNGNkZWQ4Mg=="
           target="_blank"
+          id="redes"
         >
           <img src="./assets/instagram.png" alt="ícone do instagram" />
         </a>
-
-        <a href="https://www.facebook.com/edianderson.ferreira" target="_blank">
+        <a
+          href="https://www.facebook.com/edianderson.ferreira"
+          target="_blank"
+          id="redes"
+        >
           <img src="./assets/facebook.png" alt="ícone do facebook" />
         </a>
       </div>
     </aside>
     <nav>
       <a class="memory">
-        <small>20 de Março 2023</small>
         <h1>Apresentação: Quem sou eu?</h1>
         <div>
           <img src="./assets/foto capa edi.jpg" alt="Foto de Edianderson" />
         </div>
         <p>
-          Olá! Me chamo Edianderson Filho, tenho 24 anos, sou músico e este é o meu primeiro
-          projeto WEB. Sou licenciando em música no IFPE - Campus Belo Jardim e
-          tive o meu primeiro contato com a área de progamação por meio dos
-          projetos de extensão que os alunos do curso de Engenharia de Software criaram. Após esse contato inicial, tenho tido um
-          interesse crescente por conhecimento na área da tecnologia, mais
-          específicamente, no desenvolvimento de Softwares. <br> E, foi este desejo
-          que me fez criar este site!
+          Olá! Me chamo Edianderson Filho, tenho 24 anos, sou músico e este é o
+          meu primeiro projeto WEB. Sou licenciando em música no IFPE - Campus
+          Belo Jardim e tive o meu primeiro contato com a área de progamação por
+          meio dos projetos de extensão que os alunos do curso de Engenharia de
+          Software criaram. Após esse contato inicial, tenho tido um interesse
+          crescente por conhecimento na área da tecnologia, mais
+          específicamente, no desenvolvimento de Softwares. <br />
+          E, foi este desejo que me fez criar este site!
         </p>
       </a>
       <a class="memory">
-        
         <h1>Next Level Week: Meu primeiro passo para tornar-me um DEV</h1>
         <div>
           <img
@@ -70,7 +73,19 @@
           />
         </div>
         <p>
-          Nessa minha nova caminhada no campo da tecnologia, tive uma série de amigos que impulsionaram o meu interesse por desenvolvimento de Software. Conviver com pessoas que estão em um mergulho constante no mundo tecnológico fez com que eu desejasse trilhar este mesmo caminho. A Rocketseat caiu de para-quedas nos meus braços graças à uma amiga que já atua com DEV e já havia participado de várias maratonas elaboradas pela empresa e viu que seria uma grande oportunidade para que eu tivesse o primeiro contato com códigos de uma maneira mais prática e eficiente. Eu não via como algo possível para mim ser um desenvolvedor, mas hoje, vejo como algo que eu posso alcançar graças ao NLW. <br> A Rocketseat trouxe para minha vida mais uma meta a ser alcançada. tornar-me um DEV!
+          Nessa minha nova caminhada no campo da tecnologia, tive uma série de
+          amigos que impulsionaram o meu interesse por desenvolvimento de
+          Software. Conviver com pessoas que estão em um mergulho constante no
+          mundo tecnológico fez com que eu desejasse trilhar este mesmo caminho.
+          A Rocketseat caiu de para-quedas nos meus braços graças à uma amiga
+          que já atua com DEV e já havia participado de várias maratonas
+          elaboradas pela empresa e viu que seria uma grande oportunidade para
+          que eu tivesse o primeiro contato com códigos de uma maneira mais
+          prática e eficiente. Eu não via como algo possível para mim ser um
+          desenvolvedor, mas hoje, vejo como algo que eu posso alcançar graças
+          ao NLW. <br />
+          A Rocketseat trouxe para minha vida mais uma meta a ser alcançada.
+          tornar-me um DEV!
         </p>
       </a>
     </nav>
