--- a/index.html
+++ b/index.html
@@ -34,16 +34,15 @@
         <a
           href="https://instagram.com/_ediandersonf?igshid=MzNlNGNkZWQ4Mg=="
           target="_blank"
-          id="redes"
         >
-          <img src="./assets/instagram.png" alt="ícone do instagram" />
+          <div class="tran">
+            <img src="./assets/instagram.png" alt="ícone do instagram" />
+          </div>
         </a>
-        <a
-          href="https://www.facebook.com/edianderson.ferreira"
-          target="_blank"
-          id="redes"
-        >
-          <img src="./assets/facebook.png" alt="ícone do facebook" />
+        <a href="https://www.facebook.com/edianderson.ferreira" target="_blank">
+          <div class="tran">
+            <img src="./assets/facebook.png" alt="ícone do facebook" />
+          </div>
         </a>
       </div>
     </aside>
